--- a/detail/阿里巴巴计算机视觉算法实习生（2018届）-1.md
+++ b/detail/阿里巴巴计算机视觉算法实习生（2018届）-1.md
@@ -5,27 +5,79 @@
 > https://mp.weixin.qq.com/s?_biz=MzUxNjcxMjQxNg==&mid=2247488083&idx=3&sn=499149282d197c1b68d3fa105a69e271&chksm=f9a260dcced5e9ca7a86741c90b5199251b4bf02b2279b314fa3302911b8d0c22e036dd7bb33&scene=21#wechat_redirect
 
 1. 自我介绍
+
 2. 介绍简历上的项目
+
 3. 介绍一下LR及其损失函数
+
+   参考答案：
+
+   （1）介绍LR
+
+   LR——逻辑回归
+
+   逻辑回归是机器学习中的一个非常常见的模型， 逻辑回归模型其实仅在线性回归的基础上，套用了一个逻辑函数。
+
+   逻辑回归可以看做是两步，第一步和线性回归模型的形式相同，即一个关于输入x的线性函数：
+
+    ![img](https://img-blog.csdn.net/20180605181112168?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MTUzNzU5OQ==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+
+   第二步通过一个逻辑函数，即sigmoid函数，将线性函数转换为非线性函数。
+
+   ![img](https://img-blog.csdn.net/20180605182112672?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MTUzNzU5OQ==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+
+   （2）LR的损失函数
+
+   为了训练逻辑回归模型的参数w和b需要一个代价函数，算法的代价函数是对m个样本的损失函数求和然后除以m
+
+   ![img](https://img-blog.csdn.net/20180605181552719?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MTUzNzU5OQ==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+
+   ![img](https://img-blog.csdn.net/20180605181617361?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MTUzNzU5OQ==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+
+   https://blog.csdn.net/weixin_41537599/article/details/80585201
+
+   https://blog.csdn.net/daunxx/article/details/51816588
+
 4. 类别不平衡怎么解决的？
+
+   
+
 5. ResNet的特点有哪些？
+
 6. 为什么要使用1x1卷积，哪些情况可以使用1x1卷积？
+
 7. 支持向量机(SVM)的原理
+
 8. SVM有哪些核函数？
+
 9. 手写计算AUC曲面面积的代码（伪代码也行）
+
 10. 如何解决过拟合？
+
 11. 讲一下随机森林(RF)的原理
+
 12. YOLO中如何通过 K-Means 得到 anchor boxes？
+
 13. ReLU有哪些变体？
+
 14. BN和GN的区别？各有什么优缺点？
+
 15. 主要用什么语言？（答：C++）
+
 16. 线程和进程的区别？
+
 17. C++的指针和引用有哪些区别？
+
 18. 静态变量可以类内初始化吗？
+
 19. 虚函数表是干嘛的？
+
 20. 介绍一下快速排序原理
+
 21. 为什么需要四次挥手？
+
 22. Python中的对象(Object)和C++中的对象有什么区别？
+
 23. Python的 lambda用过么？
 
 手撕代码
