--- a/detail/b站算法岗-人工智能与技术部三面面经（2020届）.md
+++ b/detail/b站算法岗-人工智能与技术部三面面经（2020届）.md
@@ -4,10 +4,12 @@
 
 来源：https://www.nowcoder.com/discuss/239826
 
+声明：本文仅用于学习交流，非商业用途，如有侵权请联系删除～
+
  
 
 **一面 40min**
- 
+
 
 梯度下降为什么可以用当前点的梯度作为参数的最优更新方向？
  知道二阶优化算法吗？牛顿法的原理？
@@ -19,7 +21,7 @@
  如果地图很大，有什么改进方法？  
 
   **二面 1h**
- 
+
 
 项目逐个问，关注细节，你的角色，如何团队协作，有什么收获等等。扣得很细  
 
