--- a/detail/字节跳动算法岗实习面经（2019届）.md
+++ b/detail/字节跳动算法岗实习面经（2019届）.md
@@ -4,6 +4,8 @@
 
 来源链接：https://www.nowcoder.com/discuss/174565
 
+声明：本文仅用于学习交流，非商业用途，如有侵权请联系删除～
+
 
 
 今天下午终于等到了心心念的字节跳动算法实习生的面试，我报的是算法实习生-数据挖掘、搜索、推荐三个方面。
