--- a/detail/阿里巴巴计算机视觉算法实习生（2018届）-1.md
+++ b/detail/阿里巴巴计算机视觉算法实习生（2018届）-1.md
@@ -3,6 +3,8 @@
 > 来源CVer
 >
 > https://mp.weixin.qq.com/s?_biz=MzUxNjcxMjQxNg==&mid=2247488083&idx=3&sn=499149282d197c1b68d3fa105a69e271&chksm=f9a260dcced5e9ca7a86741c90b5199251b4bf02b2279b314fa3302911b8d0c22e036dd7bb33&scene=21#wechat_redirect
+>
+> 声明：本文仅用于学习交流，非商业用途，如有侵权请联系删除～
 
 1. 自我介绍
 
