--- a/detail/阿里巴巴计算机视觉算法实习生（2018届）.md
+++ b/detail/阿里巴巴计算机视觉算法实习生（2018届）.md
@@ -2,6 +2,8 @@
 
 来源链接：https://blog.csdn.net/qq_33638791/article/details/79802934
 
+声明：本文仅用于学习交流，非商业用途，如有侵权请联系删除～
+
 由于简历里写了自己相对于目标检测，计算机视觉方向了解的多一些，所以基本上没有问传统的ML算法，一共面了23分钟，基本上就凉了。 
 
 **DL方面（15分钟）** 
