--- a/detail/SLAM秋招面经（2020届）.md
+++ b/detail/SLAM秋招面经（2020届）.md
@@ -1,6 +1,12 @@
 # SLAM秋招面经
 
-https://www.nowcoder.com/discuss/294308 
+作者：zyx0507
+
+来源链接：https://www.nowcoder.com/discuss/294308 
+
+声明：本文仅用于学习交流，非商业用途，如有侵权请联系删除～
+
+
 
 SLAM秋招面经（大疆、华为、海康、图森、小马智行、地平线、momenta、滴滴）  前段时间一直没更新博客，因为论文、实习、秋招一系列事情都非常忙，如今秋招接近尾声，稍有空闲，所以来写一个面经，希望大家能收益。
 
