--- a/detail/转行渣硕的算法路，记录走过的坑和一些笔经面经给转行算法的同学（2020届）.md
+++ b/detail/转行渣硕的算法路，记录走过的坑和一些笔经面经给转行算法的同学（2020届）.md
@@ -1,6 +1,12 @@
 # 转行渣硕的算法路，记录走过的坑和一些笔经面经给转行算法的同学
 
-https://www.nowcoder.com/discuss/295287
+作者：工大菜鸡
+
+来源链接：https://www.nowcoder.com/discuss/295287
+
+声明：本文仅用于学习交流，非商业用途，如有侵权请联系删除～
+
+
 
 **我从今年7月15号投递出我的第一份简历，到9月28号结束秋招，两个多月的时间投递了差不多70家互联网/信息技术公司，面试了30多家，可以说一路都是在笔试和面试中成长的，老实说，有些面试官问的问题我至今还没搞懂……惭愧惭愧。PS：我学的大都是经典机器学习算法以及NLP领域的深度学习算法，投的岗位也都是与之相关的。**
 
